Rename public-holidays to holidays-public as this package name as already been taken

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "public-holidays",
+  "name": "holidays-public",
   "version": "0.0.0",
   "description": "gets public holidays within a specified timeframe",
   "main": "lib/index.js",
